attempt fix on nav ul alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,8 +42,8 @@ nav {
     background-color: var(--bg-color);
     color: black;
     text-align: center;
-    /*display: flex;
-    align-items: center;*/
+    display: flex;
+    justify-content: center;
     margin: 10px 0 10px 0;
     max-width: 600px;
     border: 2.5px solid green;
@@ -51,7 +51,7 @@ nav {
 
 .navigation ul {
     display: flex;
-    align-items: center;
+    
     padding: 5px 0 5px 0;
     list-style-type: none;
 }
@@ -265,6 +265,10 @@ td {
 
 @media screen and (max-width: 500px){
 
+    .navigation {
+        max-width: 95%;
+    }
+
     .navigation li {
         font-size: 10px;
     }
@@ -303,7 +307,7 @@ td {
 
     .section {
         width: 90%;
-        background-color: blue;
+        background-color: green;
     }
 }
 
